--- a/main_app/templates/services.html
+++ b/main_app/templates/services.html
@@ -1,12 +1,25 @@
 {% extends 'base.html' %}
 
-{% block title} - Services{% endblock %}
+{% block title %} Services{% endblock %}
 
 {% block content %}
 
+<h1>Services</h1>
+<div class="container">
+    {% for service in services %}
 <a href="">
-    <img src="{{service.image}}" alt="{{service.name}}" />
-    <p>{{service.name}}</p>
+    <div class="row g-6">
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="card">
+                <img src="{{service.image}}" alt="{{service.name}}" class="card-img-top" />
+                <div class="card-body">
+                    <h5 class="card-title">{{service.name}}</h5>
+                    <p class="card-text">{{service.description}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </a>
-
+{% endfor %}
+</div>
 {% endblock %}
