--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devine Spa</title>
+    <title>Divine Spa</title>
 </head>
 <body>
     {% extends 'base.html' %}
     {% block content %}
-    <h1>Welcome to Devine Spa</h1>
+    <h1>Welcome to Divine Spa</h1>
     {% endblock %}
 </body>
 </html>
