detail page created w/ no styling

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,12 +9,12 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'styles/main.css' %}" />
     <script src="{% static 'scripts/main.js' %}" defer></script>
-    <title>Devine Spa - {% block title %}{% endblock %}</title>
+    <title>Divine Spa - {% block title %}{% endblock %}</title>
 </head>
 <body>
     <nav class="navbar bg-light fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Devine Spa</a>
+          <a class="navbar-brand" href="/">Divine Spa</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
