--- a/main_app/templates/service_detail.html
+++ b/main_app/templates/service_detail.html
@@ -6,7 +6,13 @@
 </div>
 
 <div>
-    <img src="{{service.image}}" alt="{{artist.name}}" />
+    <img src="{{service.img}}" alt="{{artist.name}}" />
+</div>
+<div>
+    <p>{{service.description}}</p>
+    <p>{{service.packagename1}} {{service.packageprice1}}</p>
+    <p>{{service.packagename2}} {{service.packageprice2}}</p>
+    <p>{{service.packagename3}} {{service.packageprice3}}</p>
 </div>
 
 {% endblock %}
