--- a/main_app/templates/services.html
+++ b/main_app/templates/services.html
@@ -7,11 +7,11 @@
 <h1>Services</h1>
 <div class="container">
     {% for service in services %}
-<a href="{% url 'service_details' service.pk %}">
+<a href="{% url 'service_detail' service.pk %}">
     <div class="row g-6">
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
-                <img src="{{service.image}}" alt="{{service.name}}" class="card-img-top" />
+                <img src="{{service.img}}" alt="{{service.name}}" class="card-img-top" />
                 <div class="card-body">
                     <h5 class="card-title">{{service.name}}</h5>
                     <p class="card-text">{{service.description}}</p>
