--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -41,7 +41,7 @@
                   <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
                     <li><a class="dropdown-item" href="#">Contact Us</a></li>
                     <li><a class="dropdown-item" href="#">Frequently Asked Questions</a></li>
-                    <li><a class="dropdown-item" href="#">Testimonials</a></li>
+                    <li><a class="dropdown-item" href="#">Reviews</a></li>
                   </ul>
                 </li>
               </ul>
