removed html from home and aboit templates

--- a/main_app/templates/service_detail.html
+++ b/main_app/templates/service_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% block title %} {{service.name}}{% endblock %}
 
 <div>
     <h1>{{service.name}}</h1>
