--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,8 +1,8 @@
 
 {% extends 'base.html' %}
 {% block content %}
-{% block title %} {{service.name}}{% endblock %}
+{% block title %} Home{% endblock %}
 
-<h1>About Us</h1>
+<h1>Welcome to Divine Spa</h1>
 
 {% endblock %}
