--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -32,7 +32,7 @@
                   <a class="nav-link" href="/services">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Book an Appointment</a>
+                  <a class="nav-link" href="/book_appointment">Book an Appointment</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
