--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -4,7 +4,8 @@
 
 <h1>Appointments</h1>
 
-<form action="{% url 'confirmation' %}" method="POST">
+<form action="{% url 'appointment_create' %}" method="POST">
+    {% csrf_token %}
 
     <div>
         <input
