review page configured

--- a/main_app/templates/reviews.html
+++ b/main_app/templates/reviews.html
@@ -5,54 +5,14 @@
 <h1>Leave a Review</h1>
 <h1>Leave a Review</h1>
 <h1>Leave a Review</h1>
+<a class="button is-dark" href="{% url 'review_create' %}">Add Review</a>
+
 <div>
-    <form action="{% url 'review_create' %}" method ="POST">
-        {% csrf_token %}
-        <div>
-            <input
-                class="input"
-                type="text"
-                name="name"
-                placeholder="Name"
-                required
-            />
-        </div>
-        <div>
-            <input
-                class="input"
-                type="number"
-                name="rating"
-                placeholder="Rating"
-                max="5"
-                min="1"
-                required
-            />
-        </div>
-        <div>
-            <input
-                class="input"
-                type="text"
-                name="comment"
-                placeholder="Tell us about your experience..."
-                required
-            />
-        </div>
-        <div>
-            <input type="submit" value="Add Review" />
-        </div>
-    </form>
+    {% for review in reviews %}
+    <p>{{review.name}}</p>
+    <p>{{review.rating}}</p>
+    <p>{{review.comment}}</p>
+    {% endfor %}
 </div>
-{% for review in review.reviews.all %}
-<div>
-    <span>{{forloop.counter}}</span>
-    <span>{{review.name}}</span>
-    <span>{{review.rating}}</span>
-    <span>{{review.comment}}</span>
-</div>
-{% empty %}
-<div>
-  <p>No Reviews Yet</p>  
-</div>
-{% endfor %}
 
 {% endblock %}
