--- a/main_app/templates/confirmation.html
+++ b/main_app/templates/confirmation.html
@@ -1,4 +1,12 @@
 {% extends 'base.html' %}{% block content %}
 
-<h1>Thank you!!</h1>
+
+{% for review in reviews %}
+<h1>a</h1>
+<h1>a</h1>
+<h1>a</h1>
+<h1>a</h1>
+<h1>a</h1>
+<h1>Thank you {{name}}!!</h1>
+{% endfor %}
 {% endblock %}
