--- a/main_app/templates/confirmation.html
+++ b/main_app/templates/confirmation.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}{% block content %}
 
 
-{% for review in reviews %}
+{% for appointment in appointments %}
 <h1>a</h1>
 <h1>a</h1>
-<h1>a</h1>
-<h1>a</h1>
-<h1>a</h1>
-<h1>Thank you {{name}}!!</h1>
+
+<h1>Thank you {{appointment.name}}!!</h1>
 {% endfor %}
+
+
+<a href="/">continue browsing</a>
 {% endblock %}
