--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -8,31 +8,47 @@
     {% csrf_token %}
 
     <div>
-        <input
-            class="input"
-            type="text"
-            name="name"
-            placeholder="Name"
-            required
-        />
+        <label>Name
+            <input
+                class="input"
+                type="text"
+                name="name"
+                required
+            />
+        </label>
     </div>
     <div>
-        <input
-            class="input"
-            type="text"
-            name="email"
-            placeholder="Email"
-            required
-        />
+        <label>Email
+            <input
+                class="input"
+                type="text"
+                name="email"
+                required
+            />
+        </label>
     </div>
     <div>
-        <input
-            class="input"
-            type="text"
-            name="number"
-            placeholder="Number"
-            required
-        />
+        <label>Phone Number
+            <input
+                class="input"
+                type="text"
+                name="number"
+                required
+            />
+        </label>
+    </div>
+    <div>
+        <label>Date
+            <input
+                id="datefield"
+                class="input"
+                type="date"
+                name="date"
+                min="2050-01-01"
+                onfocus="this.min=new Date().toISOString().split('T')[0]"
+                required
+            />
+        </label>
     </div>
     <div>
         <input type="submit" value="Confirm Appointment" />
