carousel images added

--- a/main_app/templates/confirmation.html
+++ b/main_app/templates/confirmation.html
@@ -2,8 +2,7 @@
 
 
 {% for appointment in appointments %}
-<h1>a</h1>
-<h1>a</h1>
+<h1>Appointment Received</h1>
 
 <h1>Thank you {{appointment.name}}!!</h1>
 {% endfor %}
