--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -14,8 +14,8 @@
       <div class="carousel-item active">
         <img src="https://i.imgur.com/yWD4p6U.jpg" class="d-block w-100" alt="Hot Stone Massage" style="max-height:95.7vh">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>Feel Like Your Best Self Again</h5>
+          <p>The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
         </div>
       </div>
       <div class="carousel-item">
