finished inputting all details for services and fixed typos

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -15,7 +15,7 @@
         <img src="https://i.imgur.com/yWD4p6U.jpg" class="d-block w-100" alt="Hot Stone Massage" style="max-height:95.7vh">
         <div class="carousel-caption d-none d-md-block">
           <h5>Feel Like Your Best Self Again</h5>
-          <p>The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
+          <p>The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
         </div>
       </div>
       <div class="carousel-item">
