--- a/main_app/templates/service_detail.html
+++ b/main_app/templates/service_detail.html
@@ -18,7 +18,7 @@
         <h5 class="mt-0">{{detail.name}}</h5>
         <p>{{detail.description}}</p>
         <p class="text-end fw-semibold">{{detail.price}}</p>
-        <a href="#" class="btn btn-primary stretched-link">Add to Cart</a>
+        <a href="#" class="btn btn-primary stretched-link">Book Today</a>
     </div>
 </div>
 <br>
