--- a/main_app/templates/review_create.html
+++ b/main_app/templates/review_create.html
@@ -2,10 +2,13 @@
 {% block content %}
 <h1>Add Review</h1>
 
+
+<table>
 <form method="post">
   {% csrf_token %} 
-  {{form.as_p}} 
-  <input type="submit" value="Submit" />
+  {{form.as_table}}
+</table>
+  <button class="btn btn-secondary">Submit</button>
 </form>
 
 {% endblock %}
