--- a/main_app/templates/reviews.html
+++ b/main_app/templates/reviews.html
@@ -6,10 +6,15 @@
 
 <div>
     {% for review in reviews %}
-    <p>{{review.name}}</p>
-    <p>Service: {{review.service}}</p>
-    <p>Rating: {{review.rating}}</p>
-    <p>Comment: {{review.comment}}</p>
+
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">{{review.name}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Service: {{review.service}}</h6>
+            <p>Rating: {{review.rating}}</p>
+            <p class="card-text">Comment: {{review.comment}}</p>
+        </div>
+      </div>
     {% endfor %}
 </div>
 
