--- a/main_app/templates/services.html
+++ b/main_app/templates/services.html
@@ -5,10 +5,12 @@
 {% block content %}
 
 <h1>Services</h1>
+<div class="gallery d-md-flex flex-wrap justify-content-center">
+
     {% for service in services %}
  
 
-    <div class="card" style="width: 18rem;">
+    <div class="card m-2" style="width: 18rem;">
         <img src="{{service.img}}" class="card-img-top" alt="{{service.name}}">
         <div class="card-body">
           <h5 class="card-title">{{service.name}}</h5>
@@ -32,4 +34,5 @@
       </div> -->
       <br>
     {% endfor %}
+</div>
 {% endblock %}
