added service dropdown to appt form

--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -18,6 +18,22 @@
         </label>
     </div>
     <div>
+        <label>Service
+            <select name = "service" size="1">
+                <option value="perfect days">Perfect Days</option>
+                <option value="royal stone">Royal Stone</option>
+                <option value="classic treatment">Classic Treatment</option>
+                <option value="growth factor facial">Growth Factor Facial</option>
+                <option value="vitamin c">Vitamin C</option>
+                <option value="diamond brightening facial">Diamond Brightening Facial</option>
+                <option value="power glo facial">Power Glo Facial</option>
+                <option value="pink himalayan salt stone massage">Pink Himalayan Salt Stone Massage</option>
+                <option value="prenatal massage">Prenatal Massage'</option>
+                <option value="reflexology">Reflexology</option>
+                <option value="deep tissue massage">Deep Tissue Massage</option>
+        </select>
+    </div>
+    <div>
         <label>Email
             <input
                 class="input"
