--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -20,17 +20,17 @@
     <div>
         <label>Service
             <select name = "service" size="1">
-                <option value="perfect days">Perfect Days</option>
-                <option value="royal stone">Royal Stone</option>
-                <option value="classic treatment">Classic Treatment</option>
-                <option value="growth factor facial">Growth Factor Facial</option>
-                <option value="vitamin c">Vitamin C</option>
-                <option value="diamond brightening facial">Diamond Brightening Facial</option>
-                <option value="power glo facial">Power Glo Facial</option>
-                <option value="pink himalayan salt stone massage">Pink Himalayan Salt Stone Massage</option>
-                <option value="prenatal massage">Prenatal Massage'</option>
-                <option value="reflexology">Reflexology</option>
-                <option value="deep tissue massage">Deep Tissue Massage</option>
+                <option value="Perfect Days">Perfect Days</option>
+                <option value="Royal Stone">Royal Stone</option>
+                <option value="Classic Treatment">Classic Treatment</option>
+                <option value="Growth Factor Facial">Growth Factor Facial</option>
+                <option value="vitamin C">Vitamin C</option>
+                <option value="Diamond Brightening facial">Diamond Brightening Facial</option>
+                <option value="Power Glo Facial">Power Glo Facial</option>
+                <option value="Pink Himalayan Salt Stone massage">Pink Himalayan Salt Stone Massage</option>
+                <option value="Prenatal Massage">Prenatal Massage'</option>
+                <option value="Reflexology">Reflexology</option>
+                <option value="Deep Tissue Massage">Deep Tissue Massage</option>
         </select>
     </div>
     <div>
