--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% block title %} Book Appointment{% endblock %}
 
-<h1>Appointments</h1>
+<h1>Request Appointment</h1>
 
 <form action="{% url 'appointment_create' %}" method="POST">
     {% csrf_token %}
@@ -66,6 +66,18 @@
             />
         </label>
     </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+        <label class="form-check-label" for="flexRadioDefault1">
+          Default radio
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+        <label class="form-check-label" for="flexRadioDefault2">
+          Default checked radio
+        </label>
+      </div>
     <div>
         <input type="submit" value="Confirm Appointment" />
     </div>
