--- a/main_app/templates/confirmation.html
+++ b/main_app/templates/confirmation.html
@@ -6,7 +6,7 @@
 {% for appointment in appointments %}
 
 {% if forloop.last %}
-<h3>Thank you, {{appointment.name}}!</h3>
+<h3>Thank you, {{appointment.fname}}!</h3>
 <p>Your <b>{{appointment.service}}</b> session is scheduled for <b>{{appointment.date}}</b>. Please arrive 15 minutes before your appointment. If you need to reschedule, please call us at (555)-MASSAGE. See you soon!</p>
 
 {% endif %}
