--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -1,17 +1,15 @@
-.serviceimg{
-    height: 20vw;
-}
+
 
 .detailbtn{
     display: flex;
 }
 
-.test{
+/* .test{
     height: 40vw;
     max-height: 40vw;
     display: flex;
     justify-content: space-evenly;
-}
+} */
 
 .appt{
     margin-top: 10vh;
