--- a/main_app/templates/confirmation.html
+++ b/main_app/templates/confirmation.html
@@ -6,7 +6,9 @@
 {% for appointment in appointments %}
 
 {% if forloop.last %}
-<h3>Thank you, {{appointment.fname}} confirmation number # 0467{{appointment.pk}}!</h3>
+<h6>Confirmation number # 321613{{appointment.pk}}</h6>
+<br/>
+<h3>Thank you, {{appointment.fname}} !</h3>
 <p>Your <b>{{appointment.service}}</b> session is scheduled on <b>{{appointment.date}}</b> at <b>{{appointment.time}}</b>. Please arrive 15 minutes before your appointment. If you need to reschedule, please call us at (555)-MASSAGE. See you soon!</p>
 
 {% endif %}
