added back detail database

--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -40,7 +40,7 @@
                 <option value="Diamond Brightening facial">Diamond Brightening Facial</option>
                 <option value="Power Glo Facial">Power Glo Facial</option>
                 <option value="Pink Himalayan Salt Stone Massage">Pink Himalayan Salt Stone Massage</option>
-                <option value="Prenatal Massage">Prenatal Massage'</option>
+                <option value="Prenatal Massage">Prenatal Massage</option>
                 <option value="Reflexology">Reflexology</option>
                 <option value="Deep Tissue assage">Deep Tissue Massage</option>
         </select>
