--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -4,6 +4,70 @@
 {% block title %} Home{% endblock %}
 
 
+
+
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://i.imgur.com/yWD4p6U.jpg" class="d-block w-100" alt="Hot Stone Massage">
+    
+
+      <div class="container">
+        <div class="carousel-caption text-start">
+          <h1>Feel Like Your Best Self Again</h1>
+          <p>The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://i.imgur.com/TiT4C8Q.jpg" class="d-block w-100" alt="Spa Facial" style="max-height:95.7vh" >
+
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>Another example headline.</h1>
+          <p>Some representative placeholder content for the second slide of the carousel.</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://parksideresort.com/wp-content/uploads/The-Ultimate-in-Relaxation-The-Best-Spas-to-Visit-on-Your-Pigeon-Forge-Vacation-Featured-1024x538.jpeg" class="d-block w-100" alt="Relaxation" style="max-height:95.7vh">
+      <div class="container">
+       
+        <div class="carousel-caption text-end">
+          <h1>One more for good measure.</h1>
+          <p>Some representative placeholder content for the third slide of this carousel.</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+
+
+
+
+
+
+
+
+<!-- 
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -42,7 +106,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
+ -->
 
 
 
